[gd_scene load_steps=4 format=3 uid="uid://d137k83y422en"]

[ext_resource type="Script" path="res://scenes/world/scripts/world.gd" id="1_js1n6"]
[ext_resource type="PackedScene" uid="uid://ecbnai53is5y" path="res://scenes/enemies/mob/mob.tscn" id="2_qblxk"]

[sub_resource type="Curve2D" id="Curve2D_ym5kk"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="World" type="Node"]
script = ExtResource("1_js1n6")
enemy = ExtResource("2_qblxk")

[node name="MobSpawnerPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_ym5kk")

[node name="MobSpawnerPathFollow" type="PathFollow2D" parent="MobSpawnerPath"]
position = Vector2(480, 82.0772)
rotation = 1.5708
progress = 562.08

[node name="MobSpawnerWaitTimer" type="Timer" parent="MobSpawnerPath"]
wait_time = 0.5
autostart = true

[node name="PlayerSpawnMarker" type="Marker2D" parent="."]
position = Vector2(240, 360)

[connection signal="timeout" from="MobSpawnerPath/MobSpawnerWaitTimer" to="." method="_on_mob_spawner_wait_timer_timeout"]
